fix rating align

--- a/src/containers/css/estilos.css
+++ b/src/containers/css/estilos.css
@@ -57,7 +57,7 @@ article {
     font-weight: 700;
     color: #343a40;
     position: absolute;
-    right: 15px;
+    right: 0;
 }
 
 .leaderboard-container{
